# pdf-extractor

./: .gitignore  AGENTS.md  PADDLEOCR_VL_MLX_HANDOFF.md  README.md  RECONCILIATION_HANDOFF.md  instruction.md  instruction_engineer_readable.md  pyproject.toml  report.md
pdf_extract/: cli.py  combine.py  manifest.py  markdown_assets.py  paddle_output.py  page_ranges.py  reconciled_prototype.py  reconciled_store.py  reconciled_viewer.py  reconciler.py  render.py  run_layout.py  wellbore_summary.py
reviewer/: devStaticServer.js  devStaticServer.test.js  index.html  package-lock.json  package.json  vite.config.ts
reviewer/src/: App.test.tsx  App.tsx  ErrorBoundary.tsx  MarkdownPane.test.tsx  MarkdownPane.tsx  MetadataPanel.tsx  PageSidebar.tsx  SourcePagePane.tsx  assetResolver.test.ts  assetResolver.ts  main.tsx  manifest.ts  styles.css
runs/Full_30015364990000/: document.json
runs/Full_30015364990000/small/: config.json  (+1 more)
runs/Full_30015375000000/: document.json
runs/input_vl/: combined.jsonl  combined.md  config.json  manifest.jsonl
runs/smoke_paddle_331_page1/: combined.jsonl  config.json  manifest.jsonl
runs/smoke_sample_page1/: combined.jsonl  combined.md  config.json  manifest.jsonl
scripts/: run_pdf_vl.py  run_reconcile.py  run_reconciled_store_prototype.py  run_wellbore_summary.py  temp_migrate_vl_to_union.py
tests/: test_cli.py  test_manifest.py  test_outputs.py  test_page_ranges.py  test_reconciled_prototype.py  test_reconciled_store.py  test_reconciled_viewer.py  test_reconciler.py  test_render.py  test_run_layout.py  test_wellbore_summary.py
(+1353 files in other folders)
